# catop-cachehit

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  package.yml  pages.yml
docs/: CACHE-COVERAGE.md  LITELLM-PROXY.md  index.html  styles.css
examples/: litellm-cachehit.jsonl
src/catop/: __init__.py  __main__.py  agents.py  cli.py  demo.py  ingest.py  litellm_proxy.py  models.py  pricing.py  render.py  stats.py  time_windows.py
tests/: test_agents.py  test_ingest.py  test_litellm_proxy.py  test_pricing.py  test_stats.py  test_time_windows.py
