[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catop"
version = "0.1.0"
description = "A top-like terminal monitor for LLM cache hits, cached tokens, and estimated dollars saved."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Harzva" }]
keywords = ["llm", "cache", "cache-hit", "litellm", "terminal", "tui", "monitoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
]
dependencies = ["rich>=13.4.2,<13.5"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]
package = ["pyinstaller>=6.10"]

[project.urls]
Homepage = "https://github.com/Harzva/catop-cachehit"
Issues = "https://github.com/Harzva/catop-cachehit/issues"

[project.scripts]
catop = "catop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
